--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -18,11 +18,13 @@ main {
     align-items: flex-start;
   }
   .section-title {
+    margin-top: 2rem;
     max-width: 22rem;
     align-self: flex-start;
     overflow: hidden;
     min-width: 100%;
     @media (min-width: 600px) {
+      margin-top: 0;
       min-width: 0;
       align-self: auto;
       flex: 1;
